v0.11.1/_sources/generated/statsmodels.discrete.count_model.ZeroInflatedGeneralizedPoissonResults.rst.txt
statsmodels.discrete.count\_model.ZeroInflatedGeneralizedPoissonResults
=======================================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: ZeroInflatedGeneralizedPoissonResults
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ZeroInflatedGeneralizedPoissonResults.conf_int
      ~ZeroInflatedGeneralizedPoissonResults.cov_params
      ~ZeroInflatedGeneralizedPoissonResults.f_test
      ~ZeroInflatedGeneralizedPoissonResults.get_margeff
      ~ZeroInflatedGeneralizedPoissonResults.initialize
      ~ZeroInflatedGeneralizedPoissonResults.load
      ~ZeroInflatedGeneralizedPoissonResults.normalized_cov_params
      ~ZeroInflatedGeneralizedPoissonResults.predict
      ~ZeroInflatedGeneralizedPoissonResults.remove_data
      ~ZeroInflatedGeneralizedPoissonResults.save
      ~ZeroInflatedGeneralizedPoissonResults.set_null_options
      ~ZeroInflatedGeneralizedPoissonResults.summary
      ~ZeroInflatedGeneralizedPoissonResults.summary2
      ~ZeroInflatedGeneralizedPoissonResults.t_test
      ~ZeroInflatedGeneralizedPoissonResults.t_test_pairwise
      ~ZeroInflatedGeneralizedPoissonResults.wald_test
      ~ZeroInflatedGeneralizedPoissonResults.wald_test_terms
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ZeroInflatedGeneralizedPoissonResults.aic
      ~ZeroInflatedGeneralizedPoissonResults.bic
      ~ZeroInflatedGeneralizedPoissonResults.bse
      ~ZeroInflatedGeneralizedPoissonResults.fittedvalues
      ~ZeroInflatedGeneralizedPoissonResults.llf
      ~ZeroInflatedGeneralizedPoissonResults.llnull
      ~ZeroInflatedGeneralizedPoissonResults.llr
      ~ZeroInflatedGeneralizedPoissonResults.llr_pvalue
      ~ZeroInflatedGeneralizedPoissonResults.prsquared
      ~ZeroInflatedGeneralizedPoissonResults.pvalues
      ~ZeroInflatedGeneralizedPoissonResults.resid
      ~ZeroInflatedGeneralizedPoissonResults.resid_response
      ~ZeroInflatedGeneralizedPoissonResults.tvalues
      ~ZeroInflatedGeneralizedPoissonResults.use_t
   
   
   