v0.15.0/_sources/generated/statsmodels.discrete.count_model.ZeroInflatedGeneralizedPoissonResults.rst.txt
statsmodels.discrete.count\_model.ZeroInflatedGeneralizedPoissonResults
=======================================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: ZeroInflatedGeneralizedPoissonResults
   :exclude-members: conf_int,cov_params,f_test,get_diagnostic,get_distribution,get_influence,get_margeff,get_prediction,info_criteria,initialize,load,normalized_cov_params,predict,remove_data,save,score_test,set_null_options,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ZeroInflatedGeneralizedPoissonResults.conf_int
      ~ZeroInflatedGeneralizedPoissonResults.cov_params
      ~ZeroInflatedGeneralizedPoissonResults.f_test
      ~ZeroInflatedGeneralizedPoissonResults.get_diagnostic
      ~ZeroInflatedGeneralizedPoissonResults.get_distribution
      ~ZeroInflatedGeneralizedPoissonResults.get_influence
      ~ZeroInflatedGeneralizedPoissonResults.get_margeff
      ~ZeroInflatedGeneralizedPoissonResults.get_prediction
      ~ZeroInflatedGeneralizedPoissonResults.info_criteria
      ~ZeroInflatedGeneralizedPoissonResults.initialize
      ~ZeroInflatedGeneralizedPoissonResults.load
      ~ZeroInflatedGeneralizedPoissonResults.normalized_cov_params
      ~ZeroInflatedGeneralizedPoissonResults.predict
      ~ZeroInflatedGeneralizedPoissonResults.remove_data
      ~ZeroInflatedGeneralizedPoissonResults.save
      ~ZeroInflatedGeneralizedPoissonResults.score_test
      ~ZeroInflatedGeneralizedPoissonResults.set_null_options
      ~ZeroInflatedGeneralizedPoissonResults.summary
      ~ZeroInflatedGeneralizedPoissonResults.summary2
      ~ZeroInflatedGeneralizedPoissonResults.t_test
      ~ZeroInflatedGeneralizedPoissonResults.t_test_pairwise
      ~ZeroInflatedGeneralizedPoissonResults.wald_test
      ~ZeroInflatedGeneralizedPoissonResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ZeroInflatedGeneralizedPoissonResults.aic
      ~ZeroInflatedGeneralizedPoissonResults.bic
      ~ZeroInflatedGeneralizedPoissonResults.bse
      ~ZeroInflatedGeneralizedPoissonResults.fittedvalues
      ~ZeroInflatedGeneralizedPoissonResults.im_ratio
      ~ZeroInflatedGeneralizedPoissonResults.llf
      ~ZeroInflatedGeneralizedPoissonResults.llnull
      ~ZeroInflatedGeneralizedPoissonResults.llr
      ~ZeroInflatedGeneralizedPoissonResults.llr_pvalue
      ~ZeroInflatedGeneralizedPoissonResults.prsquared
      ~ZeroInflatedGeneralizedPoissonResults.pvalues
      ~ZeroInflatedGeneralizedPoissonResults.resid
      ~ZeroInflatedGeneralizedPoissonResults.resid_pearson
      ~ZeroInflatedGeneralizedPoissonResults.resid_response
      ~ZeroInflatedGeneralizedPoissonResults.tvalues
      ~ZeroInflatedGeneralizedPoissonResults.use_t
   
   
   